--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
-name: YaCut Test Suite
+name: YaCut CI/CD
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "main" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master", "main" ]
 
 jobs:
   tests:
@@ -24,9 +24,8 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
         pip install -r requirements.txt
-        pip install pytest-cov
+        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort pytest-cov
     - name: Run Tests
       run: |
         python -m flake8
@@ -42,7 +41,7 @@ jobs:
     needs: tests
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v3  # changed v2 -> v3 
+        uses: actions/checkout@v3
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1 
       - name: Login to Docker 
@@ -55,7 +54,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.USER }}/yacut:latest            
+          tags: ${{ secrets.DOCKER_USERNAME }}/yacut:latest            
 
   send_message:
     runs-on: ubuntu-latest
