--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,7 +69,7 @@ deploy:
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yacut
-            docker run --name yacut -it -p 5000:5000 yacut
+            sudo docker run --name yacut -it -p 5000:5000 yacut
 
   send_message:
     runs-on: ubuntu-latest
