--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,20 +56,20 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/yacut:latest     
 
-deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
-    steps:
-      - name: executing remote ssh commands to deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
-          passphrase: ${{ secrets.PASSPHRASE }}
-          script: |
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yacut
-            # sudo docker run --name yacut -it -p 5000:5000 yacut
+  deploy:
+      runs-on: ubuntu-latest
+      needs: build_and_push_to_docker_hub
+      steps:
+        - name: executing remote ssh commands to deploy
+          uses: appleboy/ssh-action@master
+          with:
+            host: ${{ secrets.HOST }}
+            username: ${{ secrets.USER }}
+            key: ${{ secrets.SSH_KEY }}
+            passphrase: ${{ secrets.PASSPHRASE }}
+            script: |
+              sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yacut
+              sudo docker run --name yacut -it -p 5000:5000 yacut
 
   send_message:
     runs-on: ubuntu-latest
