--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,7 +72,7 @@ jobs:
 
               sudo docker stop $(sudo docker ps -a -q)
               sudo docker run --name yacut --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/yacut
-              sudo docker yacut exec -it flask run
+              sudo docker exec -it yacut flask run
 
   send_message:
     runs-on: ubuntu-latest
