--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,8 +71,7 @@ jobs:
               sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yacut
 
               sudo docker stop $(sudo docker ps -a -q)
-              sudo docker run --name yacut --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/yacut
-              sudo docker exec -it yacut flask run
+              sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/yacut
 
   send_message:
     runs-on: ubuntu-latest
