--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,8 +70,8 @@ jobs:
             script: |
               sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yacut
 
-              sudo docker stop $(sudo docker ps -a -q)
-              sudo docker run --rm -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/yacut
+              sudo docker stop yacut
+              sudo docker run --rm -d -p 5000:5000 --name yacut ${{ secrets.DOCKER_USERNAME }}/yacut
 
   send_message:
     runs-on: ubuntu-latest
