--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,20 +57,22 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/yacut:latest     
 
   deploy:
-      runs-on: ubuntu-latest
-      needs: build_and_push_to_docker_hub
-      steps:
-        - name: executing remote ssh commands to deploy
-          uses: appleboy/ssh-action@master
-          with:
-            host: ${{ secrets.HOST }}
-            username: ${{ secrets.USER }}
-            key: ${{ secrets.SSH_KEY }}
-            passphrase: ${{ secrets.PASSPHRASE }}
-            script: |
-              sudo docker stop yacut
-              sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/yacut && sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yacut
-              sudo docker run --rm -d -p 5000:5000 --name yacut ${{ secrets.DOCKER_USERNAME }}/yacut
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+      - name: executing remote ssh commands to deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.PASSPHRASE }}
+          script: |
+            touch .env
+            echo HOST=${{ secrets.HOST }} >> .env            
+            sudo docker stop yacut
+            sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/yacut && sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yacut
+            sudo docker run --rm -d -p 5000:5000 --name yacut ${{ secrets.DOCKER_USERNAME }}/yacut
 
   send_message:
     runs-on: ubuntu-latest
