Trying to make a flash with server hostname in the form while running on server

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,9 +70,8 @@ jobs:
           script: |
             sudo docker stop yacut
             sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/yacut && sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yacut
-            touch .env
-            echo HOST=${{ secrets.HOST }} >> .env 
             sudo docker run --rm -d -p 5000:5000 --name yacut ${{ secrets.DOCKER_USERNAME }}/yacut
+            sudo docker exec -it yacut touch .env && echo HOST=${{ secrets.HOST }} >> .env
 
   send_message:
     runs-on: ubuntu-latest
