--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,7 +71,7 @@ jobs:
             sudo docker stop yacut
             sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/yacut && sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yacut
             sudo docker run --rm -d -p 5000:5000 --name yacut ${{ secrets.DOCKER_USERNAME }}/yacut
-            sudo docker exec -it yacut touch .env && echo HOST=${{ secrets.HOST }} >> .env
+            sudo docker exec yacut touch .env && echo HOST=${{ secrets.HOST }} >> .env
 
   send_message:
     runs-on: ubuntu-latest
