--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,10 +5,11 @@ on:
     branches: [ "master", "main" ]
   pull_request:
     branches: [ "master", "main" ]
+  workflow_dispatch:
 
 jobs:
-  tests:
 
+  tests:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
@@ -16,24 +17,30 @@ jobs:
         python-version: [3.7, 3.8, 3.9, 3.11]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort pytest-cov
-    - name: Run Tests
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install \
+            -r requirements.txt \
+            flake8 pep8-naming \
+            flake8-broken-line \
+            flake8-return \
+            flake8-isort \
+            pytest-cov 
+      - name: Run Tests
       run: |
         python -m flake8
         pytest --cov --cov-report=xml
-    - name: Upload coverage reports to Codecov with GitHub Action
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}  
+      - name: Upload coverage reports to Codecov with GitHub Action
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}  
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
@@ -43,14 +50,14 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1 
+        uses: docker/setup-buildx-action@v2 
       - name: Login to Docker 
         uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub 
-        uses: docker/build-push-action@v2 
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
@@ -70,7 +77,8 @@ jobs:
           script: |
             sudo docker stop yacut
             sudo docker rmi ${{ secrets.DOCKER_USERNAME }}/yacut && sudo docker pull ${{ secrets.DOCKER_USERNAME }}/yacut
-            sudo docker run --rm -e HOST=${{ secrets.HOST }} -d -p 5000:5000 --name yacut ${{ secrets.DOCKER_USERNAME }}/yacut
+            sudo docker run --rm -d -p 5000:5000 --name yacut ${{ secrets.DOCKER_USERNAME }}/yacut \
+            -e HOST=${{ secrets.HOST }}
 
   send_message:
     runs-on: ubuntu-latest
