--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,12 @@ on:
 jobs:
 
   tests:
+    name: Tests flake8 and pytest
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
         python-version: [3.7, 3.8, 3.9, 3.11]
-
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
