--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ mccabe==0.6.1
 mixer==7.2.2
 packaging==21.3; python_version >= '3.6'
 pluggy==1.0.0; python_version >= '3.6'
+psycopg2-binary 
 py==1.11.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 pycodestyle==2.8.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
 pyflakes==2.4.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
