--- a/infra/local/docker-compose.yml
+++ b/infra/local/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     restart: always
     depends_on: 
       - db
+    volumes:
+      - static_value:/app/yacut/static/      
     env_file:
       - ../../.env
   
@@ -25,6 +27,8 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/var/html/static/
 
 volumes:
-  postgres_data:    
+  postgres_data:   
+  static_value:
