--- a/infra/local/nginx.conf
+++ b/infra/local/nginx.conf
@@ -3,6 +3,10 @@ server {
     server_name localhost;
     server_tokens off;
 
+    location /static/ {
+        root /var/html/;
+    }    
+
     location / {
         proxy_pass http://web:5000;     
     }
