--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ../.env
 
   web:
-    image: alexpro1972/<project_name>  # how to use .env var here?
+    image: alexpro1972/${PROJECT_NAME}
     restart: always
     depends_on: 
       - db
