--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,6 +89,7 @@ jobs:
               FLASK_ENV=${{ secrets.FLASK_ENV }}
               PORT=${{ secrets.PORT }}
               HOST=${{ secrets.HOST }}
+              PROJECT_NAME=${{ secrets.PROJECT_NAME }}
             _EOF_
       - name: copy infra files via ssh
         uses: appleboy/scp-action@master
