--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,6 +90,7 @@ jobs:
               PORT=${{ secrets.PORT }}
               HOST=${{ secrets.HOST }}
               PROJECT_NAME=${{ secrets.PROJECT_NAME }}
+              DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
             _EOF_
       - name: copy infra files via ssh
         uses: appleboy/scp-action@master
