--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ../.env
 
   web:
-    image: alexpro1972/${PROJECT_NAME}
+    image: '${DOCKERHUB_USERNAME}/${PROJECT_NAME}'
     restart: always
     depends_on: 
       - db
