--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -102,7 +102,7 @@ jobs:
           source: "infra/docker-compose.yml, infra/nginx.conf"
           target: ${{ secrets.PROJECT_NAME }}
           overwrite: true
-          # strip_components: 1
+          strip_components: 1
 
   deploy:
     runs-on: ubuntu-latest
@@ -118,10 +118,10 @@ jobs:
           script: |
             cd ~
             cd ${{ secrets.PROJECT_NAME }}
-            sudo docker compose -f infra/docker-compose.yml down
+            sudo docker compose down
             sudo docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }}
             sudo systemctl stop nginx
-            sudo docker compose -f infra/docker-compose.yml up -d --quiet-pull
+            sudo docker compose up -d --quiet-pull
 
   send_message:
     runs-on: ubuntu-latest
