--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ../.env
+      - ./.env
 
   web:
     image: "${DOCKERHUB_USERNAME}/${PROJECT_NAME}"
@@ -15,7 +15,7 @@ services:
     volumes:
       - static_value:/app/yacut/static/       
     env_file:
-      - ../.env
+      - ./.env
 
   nginx:
     image: nginx:1.21.3-alpine
