Replaced "$hostname" with IP-addr in nginx.conf

--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name “$hostname”;
+    server_name 84.252.138.7;
     server_tokens off;
 
     location /static/ {
