--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name 84.252.138.7;
+    server_name 84.252.138.7;  # "$hostname"
     server_tokens off;
 
     location /static/ {
@@ -8,6 +8,10 @@ server {
     }    
 
     location / {
-        proxy_pass http://web:5000;     
-    }
+        proxy_pass http://web:5000;    
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+    }         
 }
