--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,20 +77,18 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            cd ~
             sudo mkdir -p ${{ secrets.PROJECT_NAME }}
             sudo chmod 777 ${{ secrets.PROJECT_NAME }} 
-            cd ${{ secrets.PROJECT_NAME }}
-            sudo cat > .env << _EOF_
+            sudo cat > ${{ secrets.PROJECT_NAME }}.env << _EOF_
               DATABASE_URL=${{ secrets.DATABASE_URL }}
               POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
               SECRET_KEY=${{ secrets.SECRET_KEY }}
+              PROJECT_NAME=${{ secrets.PROJECT_NAME }}
+              DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
               FLASK_APP=${{ secrets.FLASK_APP }}
               FLASK_ENV=${{ secrets.FLASK_ENV }}
               PORT=${{ secrets.PORT }}
               HOST=${{ secrets.HOST }}
-              PROJECT_NAME=${{ secrets.PROJECT_NAME }}
-              DOCKERHUB_USERNAME=${{ secrets.DOCKERHUB_USERNAME }}
             _EOF_
       - name: copy infra files via ssh
         uses: appleboy/scp-action@master
@@ -116,7 +114,6 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
-            cd ~
             cd ${{ secrets.PROJECT_NAME }}
             sudo docker compose down
             sudo docker rmi ${{ secrets.DOCKERHUB_USERNAME }}/${{ secrets.PROJECT_NAME }}
