--- a/infra/local/docker-compose.yml
+++ b/infra/local/docker-compose.yml
@@ -4,7 +4,9 @@ services:
     image: postgres:15.0-alpine
     restart: always
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - yacut_postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_PASSWORD=postgres
     env_file:
       - ../../.env
 
@@ -14,7 +16,10 @@ services:
     depends_on: 
       - db
     volumes:
-      - static_value:/app/yacut/static/      
+      - yacut_static_value:/app/yacut/static/ 
+    environment:
+      - DATABASE_URL=postgresql://postgres:postgres@db:5432/postgres
+      - PORT=0
     env_file:
       - ../../.env
   
@@ -27,8 +32,8 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - static_value:/var/html/static/
+      - yacut_static_value:/var/html/static/
 
 volumes:
-  postgres_data:   
-  static_value:
+  yacut_postgres_data:   
+  yacut_static_value:
