--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,9 +13,9 @@ jobs:
     name: Tests flake8 and pytest
     runs-on: ubuntu-latest
     strategy:
-      max-parallel: 4
+      max-parallel: 5
       matrix:
-        python-version: [3.7, 3.8, 3.9, 3.11]
+        python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
@@ -52,7 +52,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to Docker 
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v2 
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
@@ -119,7 +119,7 @@ jobs:
             sudo systemctl stop nginx
             sudo docker compose up -d --quiet-pull
 
-  send_message:
+  send_telegram_message:
     runs-on: ubuntu-latest
     needs: deploy
     steps:
